# dupeguru

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.py  env  package.py  requirements-extra.txt  requirements.txt  run.py  setup.cfg  setup.py
.eggs/babel-2.18.0-py3.10.egg/EGG-INFO/: requires.txt
.eggs/charset_normalizer-3.4.6-py3.10-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/imagesize-2.0.0-py3.10.egg/EGG-INFO/: RECORD
.eggs/requests-2.33.0-py3.10.egg/EGG-INFO/: requires.txt
.eggs/sphinx-8.1.3-py3.10.egg/EGG-INFO/: requires.txt
.eggs/sphinxcontrib_applehelp-2.0.0-py3.10.egg/EGG-INFO/: requires.txt
.eggs/sphinxcontrib_htmlhelp-2.1.0-py3.10.egg/EGG-INFO/: requires.txt
.eggs/sphinxcontrib_qthelp-2.0.0-py3.10.egg/EGG-INFO/: requires.txt
.eggs/urllib3-2.6.3-py3.10.egg/EGG-INFO/: requires.txt
.github/workflows/: build.yml
core/: __main__.py
hscommon/: plat.py
qt/: about_box.py
